--- a/src/Components/Meny.css
+++ b/src/Components/Meny.css
@@ -1,22 +1,25 @@
-
 .Menu {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    background-color: #333;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .Menu li {
-    padding: 10px;
-  }
-  
-  .Menu li a {
-    color: white;
-    text-decoration: none;
-  }
-  
-  .Menu li a:hover {
-    text-decoration: underline;
-  }
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  background-color: #4e586e; /* Lighter menu background color */
+  padding: 0;
+  margin: 0;
+}
+
+.Menu li {
+  padding: 10px;
+}
+
+.Menu li a {
+  color: #fff1e6; /* Light off-white text color */
+  text-decoration: none;
+  font-weight: bold;
+  text-transform: uppercase; /* Uppercase menu text */
+  transition: color 0.2s ease; /* Smooth color transition on hover */
+}
+
+.Menu li a:hover {
+  color: #e3e7f0; /* Lighter link color on hover */
+  text-decoration: underline;
+}
