--- a/src/Components/MyCalendar.css
+++ b/src/Components/MyCalendar.css
@@ -8,7 +8,7 @@ div.my-calendar-container {
     border: 1px solid #ddd;
     margin-top: 5vh;
     border-radius: 2vh;
-    background-color: #f9f9f9;
+    background-color: #e3ebf5;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
   }
   
