TodoList improved with paging, category and css

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,9 @@
   padding-bottom: 5vh;
   border-top: 2px solid #4e586e; /* Use the same color as the header */
 }
-
+.todo-list-container {
+  position: relative;
+}
 
 /* Menu Styles */
 .Menu {
