--- a/src/Components/TodoList.css
+++ b/src/Components/TodoList.css
@@ -2,15 +2,18 @@
 
 /* Container styles */
 div.todo-list {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ddd;
-    margin-top: 5vh;
-    border-radius: 2vh;
-    background-color: #e3ebf5;
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
-  }
+  position: relative; 
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  margin-top: 5vh;
+  border-radius: 2vh;
+  background-color: #e3ebf5;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
+  /* Add some padding to create space for the buttons */
+  padding-right: 8px; /* Adjust this value as needed */
+}
   
   /* Heading styles */
   h3 {
@@ -33,12 +36,25 @@ div.todo-list {
   border-radius: 3px;
   margin-bottom: 10px;
 }
-
+li.item{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: left;
+  font-weight: bold;
+  padding: 8px;
+  border-radius: 3px;
+  margin-bottom: 10px;
+}
+li.item.admin-mode {
+  /* Add padding to the right side of each list item when in admin mode */
+  padding-right: 140px; /* Adjust this value as needed */
+}
   /* Center the label text */
 li label {
     flex-grow: 1; /* Allow the label to take up available space and center it */
-    text-align: center; /* Center the text within the label */
-    margin: 0 10px; /* Add some space between the checkbox and the text */
+    text-align: left; /* Center the text within the label */
+    margin: 0 10px; 
   }
   /* Form styles */
   form {
@@ -67,7 +83,12 @@ li label {
     max-width: 100%;
     resize: both; /* Allow vertical resizing of textarea */
   }
-  
+  ul.list {
+    list-style: none;
+    padding: 0;
+    padding-left: 2px; 
+    display:block;
+  }
   button {
     padding: 10px;
     background-color: #007bff;
@@ -76,12 +97,31 @@ li label {
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+    margin-right: 5px;
   }
-  
+  .button-delete{
+    background-color: rgb(180, 66, 66);
+  }
+  .button-delete:hover{
+    background-color: rgb(119, 52, 52);
+  }
   button:hover {
     background-color: #0056b3;
   }
-  
+  .todo-list.isAdminMode .admin-buttons {
+    display: flex;
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  gap: 5px;
+  }
+  .admin-buttons {
+    display: none;
+  }
+  .item{
+    position: relative;
+  }
   /* Error message styles */
   .error-message {
     color: red;
@@ -95,26 +135,86 @@ li label {
     font-size: 14px;
     margin-top: 5px;
   }
+  .admin-button {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    padding: 8px;
+    background-color: transparent;
+    color: #3c4a63;
+    cursor:wait;
+  }
+  .category-dropdown {
+    padding: 8px;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    margin-bottom: 10px;
+    max-width: 100%;
+    background-color: #fff; /* Add a white background */
+  }
+  .todo-list .item .category {
+    font-size: 12px;
+    color: #666;
+    margin-top: 5px; /* Justera avståndet från uppgiften */
+  }
+  .pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+  }
   
+  .pagination button {
+    padding: 8px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    margin: 0 5px;
+  }
+  
+  .pagination button[disabled] {
+    background-color: #ccc;
+    cursor: not-allowed;
+  }
   @media (max-width: 768px) {
     div.todo-list {
-      max-width: 80%;
+      max-width: 100%;
+      padding-right: 8px;
+    }
+    .todo-list {
+      font-size: 14px; /* Adjust the font size as per your preference */
+    }
+    
+    /* You can also make specific elements smaller */
+    .todo-list .heading {
+      font-size: 18px; /* Adjust the font size for the heading */
+    }
+    
+    .todo-list .list label {
+      font-size: 16px; /* Adjust the font size for the task label */
+    }
+    .todo-list button {
+      font-size: 12px; /* Adjust the font size for the buttons */
+      padding: 6px 12px; /* Adjust the padding to control button size */
     }
   }
   /* Hide the default checkbox */
 .container input {
-    position: absolute;
+    position: relative;
     opacity: 0;
     cursor: pointer;
     height: 0;
     width: 0;
-  }
+}
   
   .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: absolute;
+    position:relative;
     cursor: pointer;
     font-size: 1.5rem;
     user-select: none;
