--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 /* app.css */
 
 /* Header Styles */
+.App{
+  height: 100%;
+}
 .App-header {
   background: linear-gradient(135deg, #3c4a63, #7289ab);
-  min-height: 10vh;
+  min-height: 5vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,70 +18,59 @@
 /* Body Styles */
 .App-body {
   background: linear-gradient(135deg, #7289ab, #a3afc6);
-  min-height: 90vh;
-  display: flex;
+  height:100%;
   align-items: center;
   justify-content: center;
   text-align: center;
-}
-
-/* Optional: Add a border to the body to separate it from the header */
-.App-body {
-  padding-top: 5vh;
-  padding-bottom: 5vh;
-  border-top: 2px solid #4e586e; /* Use the same color as the header */
-}
-.todo-list-container {
+  border-top: 2px solid #4e586e; 
   position: relative;
+  padding-bottom: 1vh;
+  min-height: 69vh;
 }
 
-/* Menu Styles */
-.Menu {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  background-color: #4e586e; /* Lighter menu background color */
-  padding: 0;
-  margin: 0;
-}
-
-.Menu li {
-  padding: 10px;
-}
-
-.Menu li a {
-  color: #fff1e6; /* Light off-white text color */
-  text-decoration: none;
-  font-weight: bold;
-  text-transform: uppercase; /* Uppercase menu text */
-  transition: color 0.2s ease; /* Smooth color transition on hover */
-}
-
-.Menu li a:hover {
-  color: #e3e7f0; /* Lighter link color on hover */
-  text-decoration: underline;
-}
 .row {
-  display: flex;
+  display:flex;
   flex-wrap: wrap;
+  padding-bottom: 14vh;
 }
 
 .column {
   flex: 1;
-  margin: 10px;
+  margin: auto;
 }
+.Menu {
+  display: flex;
+  justify-content: center;
+}
+
+.menu-buttons {
+  display: flex;
+}
+
+/* Basic button styles */
+.menu-buttons button {
+  font-family: 'Dancing Script', cursive;
+  padding: 10px 20px;
+  margin: 5px;
+  border: none;
+  background-color: transparent;
+  color: #333;
+  font-size: 16px;
+  cursor: pointer;
+  transition: color 0.3s ease, background-color 0.3s ease;
+}
+
+/* Button styles for the active menu item */
+.menu-buttons button.active {
+  color: #fff;
+  background-color: #7289ab;
+  border-radius: 4px;
+}
+
+/* Add any other custom styles you want for the buttons */
+
 /* Responsive styles for phones */
-@media (max-width: 600px) {
-  .Menu {
-    flex-direction: column; /* Stack the menu items vertically */
-    align-items: center; /* Center align the items */
-    background-color: #282c34; /* Use the same header color for the menu background */
-    max-width: 80%; 
-  }
- 
-  .Menu li {
-    padding: 8px 0; /* Reduce the vertical padding */
-  }
+@media (max-width: 768px) {
   .row {
     flex-direction: row; /* Stack the rows vertically on mobile */
   }
@@ -88,5 +80,13 @@
     max-width: 80%; /* Set a maximum width for each row on mobile */
     margin-left: auto;
     margin-right: auto;
+  }
+  .menu-buttons {
+    flex-wrap: wrap; /* Allow the buttons to wrap to the next line */
+  }
+
+  .menu-buttons button {
+    padding: 5px 5px; /* Adjust padding for smaller screens */
+    font-size: 20px; /* Adjust font size for smaller screens */
   }
 }
