--- a/src/styles/MyCalendar.css
+++ b/src/styles/MyCalendar.css
@@ -11,8 +11,30 @@ div.my-calendar-container {
     border-radius: 3vh;
     background-color: #e3ebf5;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
+    position: relative;
   }
   
+  .legend {
+    position: relative;
+    bottom: 10px;
+    left: 10px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  
+  .legend-item {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    font-size: small;
+  }
+  
+  .legend-color {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+  }
   
   /* Calendar styles */
   .rbc-calendar {
